tests/diagnostic_golden_cc/semantic_decl_char_len.diag
error[CF3103]: invalid CHARACTER length specification
  --> tests/diagnostic_golden_cc/semantic_decl_char_len.f:2:7
   = stage: semantic
   = help: see docs/errors.md#CF3103
  |
2 |       CHARACTER*(*) A
  |       ^
